@@ -121,7 +121,7 @@
 				static void USB_Device_GetConfiguration(void);
 				static void USB_Device_GetDescriptor(void);
 				static void USB_Device_GetStatus(const uint8_t bmRequestType);
-				#if !defined(NO_CLEARSET_FEATURE_REQUEST)
+				#if !defined(FEATURELESS_CONTROL_ONLY_DEVICE)
 				static void USB_Device_ClearSetFeature(const uint8_t bRequest, const uint8_t bmRequestType);
 				#endif
 			#endif
